replaced h-screen with 100dvh to solve the address bar on mobile

--- a/src/output.css
+++ b/src/output.css
@@ -314,6 +314,9 @@
   .h-96 {
     height: calc(var(--spacing) * 96);
   }
+  .h-dvh {
+    height: 100dvh;
+  }
   .h-full {
     height: 100%;
   }
